--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "@types/jest": "^29.5.0",
     "@types/react": "^19.1.0",
     "@types/react-native": "^0.70.0",
+    "@types/web-bluetooth": "^0.0.21",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "babel-jest": "^30.0.2",
     "eslint": "^8.0.0",
+    "expo-bluetooth": "^0.0.0",
     "jest": "^29.5.0",
+    "react-native-ble-plx": "^3.5.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
